# web-sdk

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  PHASE_0_STATUS.md  knip.jsonc  package.json  pnpm-lock.yaml  rust-toolchain.toml
.cargo/: config.toml
.github/actions/inject-linked-client-pr/: action.yml
.github/workflows/: build.yml  check-linked-client-pr.yml  check-publish.yml  publish-crates-release.yml  publish-web-sdk.yml  test.yml
crates/mobile-prover/: Cargo.toml
crates/mobile-prover/src/: lib.rs
crates/web-client/: Cargo.toml  README.md  clean.js  package.json  playwright.config.ts  rollup.config.js  tsconfig.docs.json  typedoc.json
crates/web-client/js/: client.js  constants.js  gpu-bootstrap.js  index.js
crates/web-client/js/resources/: transactions.js
crates/web-client/js/types/: api-types.d.ts  index.d.ts
crates/web-client/js/workers/: web-client-methods-worker.js  web-gpu-worker.js
crates/web-client/lazy/: package.json
crates/web-client/mt/: package.json
crates/web-client/mt/lazy/: package.json
crates/web-client/scripts/: build-types.js  check-bindgen-types.js  check-method-classification.js  check-standalone-types.js
crates/web-client/src/: lib.rs  miden_array.rs  new_transactions.rs
crates/web-client/src/models/: felt.rs  note.rs  note_recipient.rs  output_note.rs  provers.rs  transaction_script_inputs.rs
crates/web-client/src/models/transaction_request/: note_and_args.rs  note_details_and_tag.rs  note_id_and_args.rs
crates/web-client/test/: no_auth_consume.test.ts
crates/web-gpu-air/: Cargo.toml
crates/web-gpu-air/src/: alloc.rs  cpu_interp.rs  cse.rs  encode.rs  gpu.rs  lib.rs  recorder.rs  tape.rs
crates/web-gpu-air/src/shaders/: air_interp.wgsl  quadfelt.wgsl
crates/web-gpu-air/tests/: wasm32_simd128_algorithm.rs
crates/web-gpu-dft/: Cargo.toml
crates/web-gpu-dft/src/: dft.rs  gpu.rs  lib.rs  sab.rs  wasm_client.rs  wasm_worker.rs
crates/web-gpu-dft/src/shaders/: goldilocks.wgsl
patches/: @wasm-tool__rollup-plugin-rust@3.1.5.patch
scripts/: dev-with-client-pr.sh
