[workspace]
resolver = "2"

members = ["crates/idxdb-store", "crates/web-client"]

[workspace.package]
authors = ["miden contributors"]
edition = "2024"
license = "MIT"
repository = "https://github.com/0xMiden/web-sdk"
rust-version = "1.93"
version = "0.14.0"

[profile.dev]
codegen-units = 16

[profile.test-dev]
inherits = "dev"
opt-level = 1

# Fast-build variant of `release` for PR CI. The default `release` profile
# (set up implicitly by @wasm-tool/rollup-plugin-rust) enables LTO and
# codegen-units=1, which together account for ~9 of the ~13 minutes the
# WASM build job takes. PR CI doesn't ship the artifact — it only verifies
# that the code compiles + tests pass — so we trade ~1.5x larger output for
# ~3-4x faster builds. The canonical `release` profile is still used by the
# `verify-release-build` job (push to main/next only) and any local
# `cargo build --release` so the published artifact is always built with
# full optimization.
[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 16

[workspace.dependencies]
# Workspace crates
idxdb-store = { default-features = false, package = "miden-idxdb-store", path = "crates/idxdb-store", version = "0.14.0" }

# Miden client (from crates.io)
miden-client = { default-features = false, version = "0.14.5" }

# Miden protocol dependencies
miden-protocol = { default-features = false, version = "0.14" }
miden-standards = { default-features = false, version = "0.14" }

# External dependencies
async-trait = { version = "0.1" }
chrono = { version = "0.4" }
hex = { version = "0.4" }
miette = { features = ["fancy"], version = "7.6" }
rand = { version = "0.9" }
serde = { features = ["derive"], version = "1.0" }
thiserror = { default-features = false, version = "2.0" }
tracing = { version = "0.1" }

# Lints are set to warn for development, which are promoted to errors in CI.
[workspace.lints.clippy]
# Pedantic lints are set to a lower priority which allows lints in the group to be selectively enabled.
pedantic = { level = "warn", priority = -1 }
ignored_unit_patterns = "allow"              # Stylistic choice.
missing_errors_doc = "allow"                 # TODO: fixup and enable this.
missing_panics_doc = "allow"                 # TODO: fixup and enable this.
module_name_repetitions = "allow"            # Many triggers, and is a stylistic choice.
must_use_candidate = "allow"                 # This marks many fn's which isn't helpful.
should_panic_without_expect = "allow"        # We don't care about the specific panic message.
# End of pedantic lints.

# Uncomment for local development against a local miden-client checkout:
# [patch.crates-io]
# miden-client = { path = "../miden-client/crates/rust-client" }

# Bench-only: point at a local p3-miden checkout that has the per-phase tracing
# spans (FRI grind, DEEP transform in-place, etc.) added on top of the upstream
# version. Without these patches, the SDK builds against crates.io p3-miden
# which doesn't have the spans. Drop this block if you want a clean build.
[patch.crates-io]
p3-miden-lifted-air      = { path = "/Users/celrisen/miden/p3-miden/p3-miden-lifted-air" }
p3-miden-lifted-fri      = { path = "/Users/celrisen/miden/p3-miden/p3-miden-lifted-fri" }
p3-miden-lifted-stark    = { path = "/Users/celrisen/miden/p3-miden/p3-miden-lifted-stark" }
p3-miden-lmcs            = { path = "/Users/celrisen/miden/p3-miden/p3-miden-lmcs" }
p3-miden-stateful-hasher = { path = "/Users/celrisen/miden/p3-miden/p3-miden-stateful-hasher" }
p3-miden-transcript      = { path = "/Users/celrisen/miden/p3-miden/p3-miden-transcript" }

# Bench-only: patches for the simd128 packed Goldilocks experiment. The
# vendored `p3-goldilocks` (under crates/vendor/) adds a wasm32 SIMD packed
# Goldilocks impl that Plonky3 upstream doesn't have. `miden-field` and
# `miden-crypto` patches gate `Felt::Packing = PackedFelt` and the packed
# RPO/RPX/Poseidon2 permutation impls behind a `packed-felt-simd128` cargo
# feature, so toggling that feature on web-client OFF/ON gives a clean A/B
# (same fork-wiring in both, only Felt::Packing changes).
p3-goldilocks            = { path = "crates/vendor/p3-goldilocks" }
miden-field              = { path = "/Users/celrisen/miden/miden-field" }
miden-crypto             = { path = "/Users/celrisen/miden/miden-crypto-fork" }
