[package]
authors.workspace = true
categories = ["no-std"]
description = "Web Client library that facilitates interaction with the Miden network"
documentation = "https://docs.rs/miden-client-web"
edition.workspace = true
keywords = ["client", "miden", "wasm", "web"]
license.workspace = true
name = "miden-client-web"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.cargo-machete]
ignored = ["wasm-bindgen-futures"]

[lib]
crate-type = ["cdylib"]

[features]
testing = ["miden-client/testing"]
# Multi-threaded WASM build. When enabled, pulls in wasm-bindgen-rayon (the
# rayon thread pool over Web Workers + SharedArrayBuffer) plus the parallel
# paths in miden-crypto / miden-tx / Plonky3 (via cargo feature unification
# of `miden-crypto/concurrent`). When DISABLED, the SDK is single-threaded
# end-to-end and works in non-cross-origin-isolated contexts (no SAB
# requirement, no `+atomics` target feature, stable cargo with the
# precompiled rust-std-wasm32 — no `-Z build-std` needed).
#
# Two distinct WASM artifacts are shipped (see crates/web-client/rollup.config.js):
#   - dist/{eager,lazy}-st  built without this feature  → loads anywhere
#   - dist/{eager,lazy}-mt  built with this feature     → requires COI
#
# Consumers select via package.json exports subpaths:
#   `@miden-sdk/miden-sdk`           → eager-st (default; safe everywhere)
#   `@miden-sdk/miden-sdk/lazy`      → lazy-st
#   `@miden-sdk/miden-sdk/mt`        → eager-mt (opt-in; needs COI)
#   `@miden-sdk/miden-sdk/mt/lazy`   → lazy-mt
mt-threads = ["dep:wasm-bindgen-rayon", "dep:rayon", "miden-crypto/concurrent"]

# WebGPU-accelerated DFT for the LDE / FRI hot path. Implies mt-threads (GPU
# build is also multithreaded for the non-NTT work). Adds the WebGpuTransactionProver
# `TransactionProver` impl plus the `TransactionProver::newGpuProver()` JS factory.
# Off by default; the existing `WebClient::proveTransaction` JS export stays on
# the CPU path even in the GPU build, so consumers can opt-in per-call.
gpu-dft = ["dep:miden-web-gpu-dft", "mt-threads"]
# Enables the actual WGSL/wgpu kernels in miden-web-gpu-dft (default is the
# CPU-delegating stub). Requires `gpu-dft`. When this feature lands, the GPU
# build's bench numbers should diverge from the MT path.
real-gpu = ["gpu-dft", "miden-web-gpu-dft/real-gpu"]

[dependencies]
# Workspace dependencies
idxdb-store = { workspace = true }
miden-client = { features = ["testing", "tonic"], workspace = true }
# `concurrent` feature is enabled via the `mt-threads` feature only — see the
# feature definition above. Without `mt-threads`, the parallel paths stay
# inactive and the build doesn't need atomics / shared memory / nightly
# build-std.
miden-crypto = { default-features = false, version = "0.23" }
miden-protocol = { workspace = true }
miden-standards = { workspace = true }

# External dependencies
async-trait = { workspace = true }
console_error_panic_hook = { version = "0.1.7" }
hex = { version = "0.4" }
js-sys = { version = "0.3" }
rand = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { version = "0.6" }
thiserror.workspace = true
tracing = { workspace = true }
tracing-subscriber = { default-features = false, features = [
  "registry",
], version = "0.3" }
tracing-wasm = { version = "0.2" }
wasm-bindgen = { features = ["serde-serialize"], version = "=0.2.108" }
wasm-bindgen-futures = { version = "0.4" }
# Optional MT-only deps: pulled in by the `mt-threads` feature.
# wasm-bindgen-rayon bootstraps a rayon thread pool over Web Workers backed
# by SharedArrayBuffer; rayon is used directly by diagnostic helpers
# (rayon_thread_count, parallel_sum_bench).
wasm-bindgen-rayon = { version = "1.3", optional = true }
rayon = { version = "1.10", optional = true }
# Optional GPU-DFT dep: pulled in by the `gpu-dft` feature.
miden-web-gpu-dft = { path = "../web-gpu-dft", optional = true }

[dev-dependencies]
web-sys = { features = ["console"], version = "0.3" }

[lints]
workspace = true
