[package]
authors.workspace = true
categories = ["no-std"]
description = "Web Client library that facilitates interaction with the Miden network"
documentation = "https://docs.rs/miden-client-web"
edition.workspace = true
keywords = ["client", "miden", "wasm", "web"]
license.workspace = true
name = "miden-client-web"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.cargo-machete]
ignored = ["wasm-bindgen-futures"]

[lib]
crate-type = ["cdylib"]

[features]
testing = ["miden-client/testing"]
# Multi-threaded WASM build. When enabled, pulls in wasm-bindgen-rayon (the
# rayon thread pool over Web Workers + SharedArrayBuffer) plus the parallel
# paths in miden-crypto / miden-tx / Plonky3 (via cargo feature unification
# of `miden-crypto/concurrent`). When DISABLED, the SDK is single-threaded
# end-to-end and works in non-cross-origin-isolated contexts (no SAB
# requirement, no `+atomics` target feature, stable cargo with the
# precompiled rust-std-wasm32 — no `-Z build-std` needed).
#
# Two distinct WASM artifacts are shipped (see crates/web-client/rollup.config.js):
#   - dist/{eager,lazy}-st  built without this feature  → loads anywhere
#   - dist/{eager,lazy}-mt  built with this feature     → requires COI
#
# Consumers select via package.json exports subpaths:
#   `@miden-sdk/miden-sdk`           → eager-st (default; safe everywhere)
#   `@miden-sdk/miden-sdk/lazy`      → lazy-st
#   `@miden-sdk/miden-sdk/mt`        → eager-mt (opt-in; needs COI)
#   `@miden-sdk/miden-sdk/mt/lazy`   → lazy-mt
mt-threads = ["dep:wasm-bindgen-rayon", "dep:rayon", "miden-crypto/concurrent"]
# Activates the simd128 packed Goldilocks path. Propagates to miden-crypto +
# miden-field to keep all three forks in sync. With this feature OFF, Felt::Packing
# stays as Self even on wasm32+simd128 — same fork wiring, no PackedFelt code path
# active. Used for clean A/B benching of the simd128 win in isolation.
packed-felt-simd128 = ["miden-crypto/packed-felt-simd128"]

[dependencies]
# Workspace dependencies
idxdb-store = { workspace = true }
miden-client = { features = ["testing", "tonic"], workspace = true }
# `concurrent` feature is enabled via the `mt-threads` feature only — see the
# feature definition above. Without `mt-threads`, the parallel paths stay
# inactive and the build doesn't need atomics / shared memory / nightly
# build-std.
miden-crypto = { default-features = false, version = "0.23" }
miden-protocol = { workspace = true }
miden-standards = { workspace = true }

# External dependencies
async-trait = { workspace = true }
console_error_panic_hook = { version = "0.1.7" }
hex = { version = "0.4" }
js-sys = { version = "0.3" }
rand = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { version = "0.6" }
thiserror.workspace = true
tracing = { workspace = true }
tracing-subscriber = { default-features = false, features = [
  "registry",
], version = "0.3" }
tracing-wasm = { version = "0.2" }
wasm-bindgen = { features = ["serde-serialize"], version = "=0.2.108" }
wasm-bindgen-futures = { version = "0.4" }
# Optional MT-only deps: pulled in by the `mt-threads` feature.
# wasm-bindgen-rayon bootstraps a rayon thread pool over Web Workers backed
# by SharedArrayBuffer; rayon is used directly by diagnostic helpers
# (rayon_thread_count, parallel_sum_bench).
wasm-bindgen-rayon = { version = "1.3", optional = true }
rayon = { version = "1.10", optional = true }

[dev-dependencies]
web-sys = { features = ["console"], version = "0.3" }

[lints]
workspace = true
