[package]
name        = "miden-web-gpu-dft"
description = "WebGPU-accelerated DFT/NTT backend for the Miden web-sdk WASM prover."
authors.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lib]
crate-type = ["rlib"]

[features]
# When the `real-gpu` feature is OFF (current default), the crate provides a
# CPU-delegating stub that implements TwoAdicSubgroupDft<Felt> by deferring to
# Radix2DitParallel. With `real-gpu` ON, dft_batch / idft_batch / coset_lde_batch
# dispatch to WGSL kernels via wgpu (browser: webgpu backend; native: metal/
# vulkan/etc, used for tests).
default  = []
real-gpu = ["dep:wgpu", "dep:bytemuck", "dep:wasm-bindgen", "dep:wasm-bindgen-futures"]

[dependencies]
miden-crypto = { version = "0.23", default-features = false }
p3-dft       = { version = "0.5.2", default-features = false }
p3-field     = { version = "0.5.2", default-features = false }
p3-matrix    = { version = "0.5.2", default-features = false }
thiserror    = { version = "2.0", default-features = false }
# Always-on for the real-gpu path (gated below). Cheap when unused.
bytemuck     = { version = "1.16", features = ["derive"], optional = true }

# wgpu per-target so the `webgpu` browser backend is only pulled in on wasm32
# (it doesn't link on native). On native targets we get the default backend
# (Metal/Vulkan/D3D12/llvmpipe) so unit tests work on dev machines + CI.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen         = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
wgpu = { version = "29", default-features = false, features = ["webgpu", "fragile-send-sync-non-atomic-wasm"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = { version = "29", optional = true }

[dev-dependencies]
rand     = "0.9"
pollster = "0.4"
